%% Modelo de datos — gestión logística de comunidad (PostgreSQL)
%% Fuente de verdad: schema.sql. Renderizar: mmdc -i modelo.mmd -o modelo.svg
%% Esquemas: units (unit), users (app_user, contract), auth (permission, role, role_permission, user_role), public (enums y funciones)
erDiagram

  %% ---------------------------------------------------------------
  %% Relaciones
  %% ---------------------------------------------------------------
  unit o|--o{ unit : "parent_id"
  unit     ||--o{ contract : "sobre"
  app_user ||--o{ contract : "firma"
  app_user ||--o{ user_role : "tiene"
  role     ||--o{ user_role : ""
  role     ||--o{ role_permission : "concede"
  permission ||--o{ role_permission : ""

  %% ---------------------------------------------------------------
  %% Entidades
  %% ---------------------------------------------------------------
  unit {
    uuid id PK
    uuid parent_id FK "NULL solo si kind = community"
    unit_kind kind "community | building | apartment | account"
    text code "único entre hermanos"
    text name
    timestamptz deleted_at "NULL = viva"
    timestamptz created_at
    timestamptz updated_at
  }

  app_user {
    uuid id PK
    citext email UK
    text external_auth_id UK
    text full_name
    text phone
    boolean is_active
    timestamptz created_at
    timestamptz updated_at
  }

  contract {
    uuid id PK
    uuid unit_id FK
    uuid user_id FK
    contract_type type "ownership | lease | administration | employment"
    date starts_at
    date ends_at "NULL = vigente"
    text document_url
    text notes
    timestamptz created_at
    timestamptz updated_at
  }

  permission {
    text key PK "recurso.accion"
    text resource
    text action
    text description
  }

  role {
    uuid id PK
    citext name "único entre vivos"
    text description
    boolean is_system "no se elimina ni renombra"
    timestamptz deleted_at "NULL = vivo"
  }

  role_permission {
    uuid role_id PK_FK
    text permission_key PK_FK
  }

  user_role {
    uuid user_id PK_FK
    uuid role_id PK_FK
    timestamptz created_at
  }
